--- a/src/main/webapp/i18n/fr/apartment.json
+++ b/src/main/webapp/i18n/fr/apartment.json
@@ -19,7 +19,8 @@
             "apartmentId": "ApartmentId",
             "created": "Created",
             "updated": "Updated",
-            "url": "Url"
+            "url": "Url",
+            "location": "Location"
         }
     }
 }
