--- a/src/main/webapp/i18n/fr/apartment.json
+++ b/src/main/webapp/i18n/fr/apartment.json
@@ -20,7 +20,8 @@
             "created": "Created",
             "updated": "Updated",
             "url": "Url",
-            "location": "Location"
+            "location": "Location",
+            "price": "Price"
         }
     }
 }
