--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -9,6 +9,7 @@
                 "main": "Entités",
                 "apartment": "Apartment",
                 "location": "Location",
+                "price": "Price",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
