Updated Apartment, ApartmentRent views (details, edit)

--- a/src/main/webapp/i18n/en/apartment.json
+++ b/src/main/webapp/i18n/en/apartment.json
@@ -19,6 +19,7 @@
             "apartmentId": "ApartmentId",
             "created": "Created",
             "updated": "Updated",
+            "dates": "Updated / Created",
             "url": "Url",
             "location": "Location",
             "prices": "Prices"
