--- a/src/main/webapp/i18n/en/apartmentRent.json
+++ b/src/main/webapp/i18n/en/apartmentRent.json
@@ -17,7 +17,8 @@
                 "title": "ApartmentRent"
             },
             "type": "Type",
-            "owner": "Owner"
+            "owner": "Owner",
+            "agent": "Agent"
         }
     }
 }
